GPU process model fails to build after 301487@main https://bugs.webkit.org/show_bug.cgi?id=300738 rdar://162637671

Unreviewed build fix when GPU_PROCES_MODEL is 1.

301487@main conflated model process and GPU process model in a few
places, specifically the differences:

* GPU process model does not use a seperate model process
* GPU process model is not hosted, it is composited in the WCP like Canvas
* There are no portals or stage interaction in the GPU process model backend

Fix up the build by adding / shuffling some defines around

* Source/WTF/wtf/PlatformHave.h:
* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::modelContext const):
(WebCore::HTMLModelElement::setEntityTransform):
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateConfiguration):

Canonical link: https://commits.webkit.org/301533@main